# Generated by Django 5.2.1 on 2025-05-30 20:46

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Product',
            fields=[
                ('product_id', models.BigAutoField(primary_key=True, serialize=False)),
                ('seller_id', models.BigIntegerField()),
                ('title', models.CharField(max_length=255)),
                ('description', models.TextField(blank=True, null=True)),
                ('price', models.DecimalField(decimal_places=2, max_digits=12)),
                ('quantity', models.IntegerField()),
                ('status', models.CharField(choices=[('active', 'Active'), ('sold', 'Sold')], default='active', max_length=10)),
                ('category_id', models.BigIntegerField()),
            ],
        ),
    ]
